trying to fix the second column spacing.

--- a/service.css
+++ b/service.css
@@ -54,7 +54,7 @@
     
     #columnRight{
         float: right;
-        margin-right: 20%;
+        margin-right: 10%;
         margin-top: -3%;
     }
 }
